--- a/tasks/install/freebsd/main.yml
+++ b/tasks/install/freebsd/main.yml
@@ -1,6 +1,6 @@
-- name: "Install the 'py-yamllint' application package"
+- name: "Install the 'devel/py-yamllint' application package"
   ansible.builtin.package:
-    name: py-yamllint
+    name: devel/py-yamllint
     state: present
   become: true
   become_user: root
