--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,6 @@
 - name: "Install yamllint application"
   ansible.builtin.include_tasks: install/main.yml
 
+- name: "Configure yamllint"
+  ansible.builtin.include_tasks: configure/main.yml
+
